--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "js-cookie": "^2.2.1",
     "moment": "^2.29.1",
     "vue": "^2.6.11",
+    "vue-contextmenu": "^1.5.10",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
