--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^2.6.11",
     "vue-contextmenu": "^1.5.10",
     "vue-router": "^3.2.0",
+    "vue-slider-component": "^3.2.14",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
