--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ant-design-vue": "^1.7.6",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "hls.js": "^1.0.10",
     "js-cookie": "^2.2.1",
     "moment": "^2.29.1",
     "vue": "^2.6.11",
