--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "core-js": "^3.6.5",
     "hls.js": "^1.0.10",
     "js-cookie": "^2.2.1",
+    "less": "^4.1.2",
+    "less-loader": "^5.0.0",
     "moment": "^2.29.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
