--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "axios": "^0.21.1",
     "babel-plugin-import": "^1.13.3",
     "core-js": "^3.6.5",
+    "echarts": "^4.8.0",
     "hls.js": "^1.0.10",
     "less": "^4.1.2",
     "less-loader": "^5.0.0",
     "moment": "^2.29.1",
+    "v-charts": "^1.19.0",
     "vue": "^2.6.11",
+    "vue-count-to": "^1.0.13",
     "vue-router": "^3.2.0",
     "vue-slider-component": "^3.2.14",
     "vuex": "^3.4.0"
