--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "less-loader": "^5.0.0",
     "moment": "^2.29.1",
     "vue": "^2.6.11",
+    "vue-puzzle-vcode": "^1.1.9",
     "vue-router": "^3.2.0",
     "vue-slider-component": "^3.2.14",
     "vuex": "^3.4.0"
