--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-plugin-import": "^1.13.3",
     "core-js": "^3.6.5",
     "hls.js": "^1.0.10",
+    "js-base64": "^3.7.2",
     "less": "^4.1.2",
     "less-loader": "^5.0.0",
     "moment": "^2.29.1",
