--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "less-loader": "^5.0.0",
     "moment": "^2.29.1",
     "vue": "^2.6.11",
+    "vue-lazyload": "^1.3.3",
     "vue-puzzle-vcode": "^1.1.9",
     "vue-router": "^3.2.0",
     "vue-slider-component": "^3.2.14",
